pkg/tests/testthat/errors/mdl/incl/incl2.mdl
#include "incl_err.mdl"

This text may contains nonsense, all input after end is ignored.
